--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     </properties>
 
     <dependencies>
+        <!--Dependencias para habilitar el framework de junit para pruebas unitarias-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -27,6 +28,7 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+        <!--Dependencias para habilitar el framework de junit para pruebas unitarias-->
     </dependencies>
 
 </project>
